# advent-of-code

./: CMakeLists.txt
2021/: CMakeLists.txt
2021/01/: Day.cpp  Day.h
2021/02/: Day.cpp  Day.h
2021/03/: Day.cpp  Day.h
2021/04/: Day.cpp  Day.h
2021/05/: Day.cpp  Day.h
2021/06/: Day.cpp  Day.h
2021/07/: Day.cpp  Day.h
2021/08/: Day.cpp  Day.h
2021/09/: Day.cpp  Day.h
2021/10/: Day.cpp  Day.h
2021/11/: Day.cpp  Day.h
2021/12/: Day.cpp  Day.h
2021/13/: Day.cpp  Day.h
2021/14/: Day.cpp  Day.h
2021/15/: Day.cpp  Day.h
2021/16/: Day.cpp  Day.h
2021/17/: Day.cpp  Day.h
2021/18/: Day.cpp  Day.h
2021/19/: Day.cpp  Day.h
2021/20/: Day.cpp  Day.h
2021/21/: Day.cpp  Day.h
2021/22/: Day.cpp  Day.h
2021/days/day01/solutions/first/: solution.cpp  solution.hpp
2021/days/day02/: result.hpp
2021/days/day04/: day.hpp  result.hpp
2021/days/day04/solutions/first/: solution.cpp
2021/days/day05/solutions/first/: solution.cpp
2021/days/day06/solutions/first/: solution.cpp  solution.hpp
2021/days/day07/: result.hpp
2021/days/day07/solutions/first/: solution.hpp
2021/days/day08/: day.hpp
2021/days/day08/solutions/first/: solution.cpp  solution.hpp
2021/days/day09/: day.hpp  result.hpp
2021/days/day09/solutions/first/: solution.cpp
2021/days/day11/solutions/first/: solution.cpp
2021/days/day12/: result.hpp
2021/days/day13/: day.hpp
2021/days/day13/solutions/first/: solution.hpp
2021/days/day14/: day.hpp  result.hpp
2021/days/day14/solutions/first/: solution.cpp  solution.hpp
2021/days/day16/data/: sample.txt
2021/days/day16/solutions/first/: solution.hpp
2021/days/day17/: result.hpp
2021/days/day17/solutions/first/: solution.cpp
2021/days/day18/solutions/first/: solution.hpp
2021/framework/: main.cpp
2021/framework/common/: day_base.hpp  day_impl.hpp
2021/template/: result.hpp
2021/template/solutions/first/: solution.cpp
2022/: CMakeLists.txt
2022/01/: Day.cpp  Day.h
2022/02/: Day.cpp  Day.h
2022/03/: Day.cpp  Day.h
2022/04/: Day.cpp  Day.h
2022/05/: Day.cpp  Day.h
2022/06/: Day.cpp  Day.h
2022/07/: Day.cpp  Day.h
2022/08/: Day.cpp  Day.h
2022/09/: Day.cpp  Day.h
2022/10/: Day.cpp  Day.h
2022/11/: Day.cpp  Day.h
2022/12/: Day.cpp  Day.h
2022/13/: Day.cpp  Day.h
2022/14/: Day.cpp  Day.h
2022/15/: Day.cpp  Day.h
2022/18/: Day.cpp  Day.h
2022/20/: Day.cpp  Day.h
2022/21/: Day.cpp  Day.h
2022/22/: Day.cpp  Day.h
2022/framework/: CMakeLists.txt
2022/framework/factory/: Factory.h  FactoryManager.cpp  FactoryManager.h
2022/framework/solution/: Solution.cpp  Solution.h
2022/runner/: CMakeLists.txt  Runner.cpp  Runner.h  main.cpp
2022/solutions/: CMakeLists.txt
2022/solutions/day00/: CMakeLists.txt  Day00.cpp  Day00.h
2022/solutions/day01/: CMakeLists.txt  Day01.cpp  Day01.h
c++/: .clang-format  CMakeLists.txt
c++/common/: base.hpp  day.hpp  interface.hpp
c++/day01/: datatypes.hpp  solution.cpp
c++/day02/: datatypes.hpp  solution.cpp
c++/day03/: datatypes.hpp  solution.cpp
c++/day04/: datatypes.hpp  solution.cpp
c++/days/day01/: day.hpp  result.hpp
c++/days/day02/: day.hpp
c++/days/day02/solutions/first/: solution.cpp  solution.hpp
c++/days/day03/: day.hpp  result.hpp
c++/days/day03/solutions/first/: solution.cpp  solution.hpp
c++/days/day04/solutions/first/: solution.hpp
c++/days/day05/: day.hpp  result.hpp
c++/days/day06/: day.hpp  result.hpp
c++/days/day07/: day.hpp
c++/days/day08/: result.hpp
c++/days/day10/: day.hpp  result.hpp
c++/days/day11/: day.hpp  result.hpp
c++/days/day12/: day.hpp
c++/days/day13/: result.hpp
c++/days/day15/: day.hpp  result.hpp
c++/days/day16/: day.hpp  result.hpp
c++/days/day17/: day.hpp
c++/days/day18/: day.hpp  result.hpp
c++/framework/: datatypes.hpp  loader.hpp  main.cpp
c++/framework/common/: day.cpp  interfaces.hpp  loader.hpp  solution_base.hpp  solution_impl.hpp
c++/framework/include/: base.hpp  day.hpp
c++/framework/src/: datatypes.hpp  loader.hpp  main.cpp
c++/include/: base.hpp  day01.hpp  days.hpp
c++/src/: day01.cpp  main.cpp
c++/template/: datatypes.hpp  day.hpp  solution.cpp
c++/template/solutions/first/: solution.cpp
(+30 files in other folders)
